fixed: alignment issues for split input-box contents

--- a/resources/styles/package.css
+++ b/resources/styles/package.css
@@ -980,11 +980,20 @@ input-box > :focus-visible {
 .split > input-box {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
+	grid-row-gap: 0.6rem;
 	grid-column-gap: 1.25rem;
 }
 
-.split > label + input-box:has(> .masked) .input-choice:first-child {
-	margin-top: 0.6rem;
+.split > input-box:has(.input-panel) {
+	grid-column-gap: 0.6rem;
+}
+
+.split > input-box:has(> .masked) .masked {
+	margin-top: 0 !important;
+}
+
+.split:has(label) > input-box {
+	margin-top: 0.8rem;
 }
 
 input-note {
